After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 796834 - "should not be reached" after suspend
"should not be reached" after suspend
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: nmcli
1.12.x
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2018-07-19 10:03 UTC by biosin
Modified: 2018-08-10 08:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] cli: remove assertion in nmc_device_state_to_color() (1.43 KB, patch)
2018-08-09 18:45 UTC, Beniamino Galvani
none Details | Review

Description biosin 2018-07-19 10:03:27 UTC
I have `nmcli m` running in a terminal window
Every time after I suspend my laptop and wake it up again, it outputs:

```
Networkmanager is now in the 'asleep' state

(process:1943): nmcli-CRITICAL **: 11:53:15.952: file clients/cli/devices.c: line 1473 (<dropped>): should not be reached
wlp3s0: deactivating
Connectivity is now 'none'
wlp3s0: disconnected
There's no primary connection
wlp3s0: unmanaged
enp0s25: unavailable
wlp3s0: unavailable
Networkmanager is now in the 'disconnected' state
wlp3s0: disconnected
wlp3s0: using connection 'eduroam'
wlp3s0: connecting (prepare)
Networkmanager is now in the 'connecting' state
wlp3s0: connecting (configuring)
wlp3s0: connecting (need authentication)
wlp3s0: connecting (prepare)
wlp3s0: connecting (configuring)
wlp3s0: connecting (getting IP configuration)
wlp3s0: connecting (checking IP connectivity)
wlp3s0: connecting (starting secondary connections)
wlp3s0: connected
Networkmanager is now in the 'connected (local only)' state
Networkmanager is now in the 'connected (site only)' state
'eduroam' is now the primary connection
Networkmanager is now in the 'connected' state
Connectivity is now 'full
```

There seems to be no problem with the connection, everything works. However I report this because it says CRITICAL and because I hop it has something to do with my actual problem where my devices are 'unavailable' after I remove my laptop from the dock.

Laptop is a Lenovo X250
Ethernet card is Intel Corporation Ethernet Connection (3) I218-LM (rev 03)
Wifi card is is Intel Corporation Wireless 7265 (rev 59)
Comment 1 Beniamino Galvani 2018-08-09 18:45:34 UTC
Created attachment 373295 [details] [review]
[PATCH] cli: remove assertion in nmc_device_state_to_color()
Comment 2 Thomas Haller 2018-08-09 20:08:03 UTC
lgtm.

Seems a candidate for backport to nm-1-12, possibly also to rhel-7.6
Comment 3 Beniamino Galvani 2018-08-10 08:21:56 UTC
Fixed on master:

https://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=c955d91d4bbd1aec0e00be8955ac24aecf64182f

and nm-1-12. Thanks for reporting the issue!