cli: remove assertion in nmc_device_state_to_color()

nmcli should not fail when the state device state is > ACTIVATED.
Just return an unknown color code like we used to do, and like we do
for connections.

Fixes: 31aa2cfe29beb1bb7371ff36dbbd8baebeeaa06e

https://bugzilla.gnome.org/show_bug.cgi?id=796834
(cherry picked from commit c955d91d4bbd1aec0e00be8955ac24aecf64182f)